--- a/app/src/main/res/layout/fragment_add_warranty.xml
+++ b/app/src/main/res/layout/fragment_add_warranty.xml
@@ -144,6 +144,7 @@
                             android:inputType="none"
                             android:maxLines="1"
                             android:textColorHint="@color/grayDark"
+                            android:textDirection="ltr"
                             android:textSize="@dimen/text_size_16sp" />
 
                     </com.google.android.material.textfield.TextInputLayout>
@@ -191,6 +192,7 @@
                             android:inputType="none"
                             android:maxLines="1"
                             android:textColorHint="@color/grayDark"
+                            android:textDirection="ltr"
                             android:textSize="@dimen/text_size_16sp" />
 
                     </com.google.android.material.textfield.TextInputLayout>
