--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -94,7 +94,7 @@
 
                     <com.google.android.material.textview.MaterialTextView
                         android:id="@+id/tv_account_email"
-                        android:layout_width="@dimen/width_0dp"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginHorizontal="@dimen/margin_12dp"
                         android:ellipsize="end"
@@ -105,8 +105,10 @@
                         android:textAlignment="gravity"
                         android:textColor="@color/black"
                         android:textSize="@dimen/text_size_16sp"
+                        app:layout_constrainedWidth="true"
                         app:layout_constraintBottom_toBottomOf="@+id/iv_account_email"
                         app:layout_constraintEnd_toStartOf="@+id/btn_account_verification"
+                        app:layout_constraintHorizontal_bias="0"
                         app:layout_constraintStart_toEndOf="@+id/iv_account_email"
                         app:layout_constraintTop_toTopOf="@+id/iv_account_email"
                         app:layout_constraintVertical_bias="0.5"
