Improve Localized UI

--- a/app/src/main/res/layout-land/fragment_change_password.xml
+++ b/app/src/main/res/layout-land/fragment_change_password.xml
@@ -83,7 +83,7 @@
                     android:gravity="center_vertical"
                     android:hint="@string/change_password_hint_current"
                     android:imeOptions="actionNext"
-                    android:inputType="textPassword"
+                    android:inputType="textPassword|textVisiblePassword"
                     android:maxLines="1"
                     android:textColorHint="@color/grayDark"
                     android:textSize="@dimen/text_size_16sp" />
@@ -128,7 +128,7 @@
                     android:gravity="center_vertical"
                     android:hint="@string/change_password_hint_new"
                     android:imeOptions="actionNext"
-                    android:inputType="textPassword"
+                    android:inputType="textPassword|textVisiblePassword"
                     android:maxLines="1"
                     android:textColorHint="@color/grayDark"
                     android:textSize="@dimen/text_size_16sp" />
@@ -173,7 +173,7 @@
                     android:gravity="center_vertical"
                     android:hint="@string/change_password_hint_retype"
                     android:imeOptions="actionDone"
-                    android:inputType="textPassword"
+                    android:inputType="textPassword|textVisiblePassword"
                     android:maxLines="1"
                     android:textColorHint="@color/grayDark"
                     android:textSize="@dimen/text_size_16sp" />
