--- a/app/src/main/res/layout/fragment_change_password.xml
+++ b/app/src/main/res/layout/fragment_change_password.xml
@@ -81,7 +81,7 @@
                     android:gravity="center_vertical"
                     android:hint="@string/change_password_hint_current"
                     android:imeOptions="actionNext"
-                    android:inputType="textPassword"
+                    android:inputType="textPassword|textVisiblePassword"
                     android:maxLines="1"
                     android:textColorHint="@color/grayDark"
                     android:textSize="@dimen/text_size_16sp" />
@@ -126,7 +126,7 @@
                     android:gravity="center_vertical"
                     android:hint="@string/change_password_hint_new"
                     android:imeOptions="actionNext"
-                    android:inputType="textPassword"
+                    android:inputType="textPassword|textVisiblePassword"
                     android:maxLines="1"
                     android:textColorHint="@color/grayDark"
                     android:textSize="@dimen/text_size_16sp" />
@@ -171,7 +171,7 @@
                     android:gravity="center_vertical"
                     android:hint="@string/change_password_hint_retype"
                     android:imeOptions="actionDone"
-                    android:inputType="textPassword"
+                    android:inputType="textPassword|textVisiblePassword"
                     android:maxLines="1"
                     android:textColorHint="@color/grayDark"
                     android:textSize="@dimen/text_size_16sp" />
