--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -134,6 +134,7 @@
         <item name="android:textSize">@dimen/text_size_16sp</item>
         <item name="android:fontFamily">@font/localized_bold</item>
         <item name="textAllCaps">false</item>
+        <item name="android:letterSpacing">0</item>
         <item name="android:maxLines">1</item>
         <item name="android:ellipsize">end</item>
         <item name="android:padding">@dimen/padding_16dp</item>
@@ -146,6 +147,7 @@
         <item name="android:textSize">@dimen/text_size_16sp</item>
         <item name="android:fontFamily">@font/localized_bold</item>
         <item name="textAllCaps">true</item>
+        <item name="android:letterSpacing">0</item>
         <item name="android:maxLines">1</item>
         <item name="android:ellipsize">end</item>
         <item name="android:padding">@dimen/padding_16dp</item>
@@ -162,6 +164,7 @@
         <item name="android:textSize">@dimen/text_size_14sp</item>
         <item name="android:fontFamily">@font/localized_bold</item>
         <item name="textAllCaps">false</item>
+        <item name="android:letterSpacing">0</item>
         <item name="android:maxLines">1</item>
         <item name="android:ellipsize">end</item>
         <item name="android:insetLeft">@dimen/content_inset_0dp</item>
@@ -285,6 +288,7 @@
         <item name="android:textSize">@dimen/text_size_14sp</item>
         <item name="android:fontFamily">@font/localized_bold</item>
         <item name="textAllCaps">true</item>
+        <item name="android:letterSpacing">0</item>
         <item name="android:ellipsize">end</item>
         <item name="android:maxLines">1</item>
         <item name="android:paddingTop">@dimen/padding_4dp</item>
@@ -299,6 +303,7 @@
         <item name="android:textSize">@dimen/text_size_14sp</item>
         <item name="android:fontFamily">@font/localized_bold</item>
         <item name="textAllCaps">true</item>
+        <item name="android:letterSpacing">0</item>
         <item name="android:ellipsize">end</item>
         <item name="android:maxLines">1</item>
         <item name="android:paddingTop">@dimen/padding_4dp</item>
@@ -346,6 +351,7 @@
     <style name="Theme.WarrantyRoster.DatePicker.YearButton" parent="Widget.MaterialComponents.MaterialCalendar.YearNavigationButton">
         <item name="android:textAllCaps">false</item>
         <item name="android:fontFamily">@font/localized_bold</item>
+        <item name="android:letterSpacing">0</item>
     </style>
 
     <style name="Theme.WarrantyRoster.DatePicker.ConfirmButton" parent="Widget.MaterialComponents.Button.TextButton.Dialog">
@@ -354,6 +360,7 @@
         <item name="android:textSize">@dimen/text_size_14sp</item>
         <item name="android:fontFamily">@font/localized_bold</item>
         <item name="textAllCaps">true</item>
+        <item name="android:letterSpacing">0</item>
         <item name="android:ellipsize">end</item>
         <item name="android:maxLines">1</item>
         <item name="android:paddingTop">@dimen/padding_4dp</item>
@@ -368,6 +375,7 @@
         <item name="android:textSize">@dimen/text_size_14sp</item>
         <item name="android:fontFamily">@font/localized_bold</item>
         <item name="textAllCaps">true</item>
+        <item name="android:letterSpacing">0</item>
         <item name="android:ellipsize">end</item>
         <item name="android:maxLines">1</item>
         <item name="android:paddingTop">@dimen/padding_4dp</item>
