--- a/app/src/main/res/layout/ad_banner_list_tapsell.xml
+++ b/app/src/main/res/layout/ad_banner_list_tapsell.xml
@@ -31,7 +31,8 @@
             android:id="@+id/tapsell_nativead_title"
             android:layout_width="@dimen/width_0dp"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="@dimen/margin_12dp"
+            android:layout_marginStart="@dimen/margin_12dp"
+            android:layout_marginEnd="@dimen/margin_2dp"
             android:ellipsize="end"
             android:fontFamily="@font/localized_bold"
             android:gravity="center_vertical|start"
@@ -41,7 +42,7 @@
             android:textColor="@color/navyBlue"
             android:textSize="@dimen/text_size_16sp"
             app:layout_constraintBottom_toTopOf="@+id/tapsell_nativead_description"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/tapsell_nativead_sponsored"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toEndOf="@+id/tapsell_nativead_logo"
             app:layout_constraintTop_toTopOf="parent"
