--- a/app/src/main/res/layout/ad_banner_list_applovin.xml
+++ b/app/src/main/res/layout/ad_banner_list_applovin.xml
@@ -35,7 +35,8 @@
         android:id="@+id/tv_banner_list_title"
         android:layout_width="@dimen/width_0dp"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="@dimen/margin_12dp"
+        android:layout_marginStart="@dimen/margin_12dp"
+        android:layout_marginEnd="@dimen/margin_2dp"
         android:ellipsize="end"
         android:fontFamily="@font/localized_bold"
         android:gravity="center_vertical|start"
@@ -45,7 +46,7 @@
         android:textColor="@color/navyBlue"
         android:textSize="@dimen/text_size_16sp"
         app:layout_constraintBottom_toTopOf="@+id/tv_banner_list_body"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/tv_banner_list_advertiser"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/iv_banner_list_icon"
         app:layout_constraintTop_toTopOf="parent"
