--- a/app/src/main/res/layout/fragment_change_email.xml
+++ b/app/src/main/res/layout/fragment_change_email.xml
@@ -81,7 +81,7 @@
                     android:gravity="center_vertical"
                     android:hint="@string/change_email_hint_password"
                     android:imeOptions="actionNext"
-                    android:inputType="textPassword"
+                    android:inputType="none"
                     android:maxLines="1"
                     android:textColorHint="@color/grayDark"
                     android:textSize="@dimen/text_size_16sp" />
