--- a/app/src/main/res/layout-land/fragment_register.xml
+++ b/app/src/main/res/layout-land/fragment_register.xml
@@ -118,7 +118,7 @@
                 android:gravity="center_vertical"
                 android:hint="@string/register_hint_password"
                 android:imeOptions="actionNext"
-                android:inputType="textPassword"
+                android:inputType="none"
                 android:maxLines="1"
                 android:textColorHint="@color/grayDark"
                 android:textSize="@dimen/text_size_16sp" />
@@ -165,7 +165,7 @@
                 android:gravity="center_vertical"
                 android:hint="@string/register_hint_retype_password"
                 android:imeOptions="actionDone"
-                android:inputType="textPassword"
+                android:inputType="none"
                 android:maxLines="1"
                 android:textColorHint="@color/grayDark"
                 android:textSize="@dimen/text_size_16sp" />
