--- a/app/src/main/res/layout-land/fragment_login.xml
+++ b/app/src/main/res/layout-land/fragment_login.xml
@@ -118,7 +118,7 @@
                 android:gravity="center_vertical"
                 android:hint="@string/login_hint_password"
                 android:imeOptions="actionDone"
-                android:inputType="none"
+                android:inputType="textNoSuggestions"
                 android:maxLines="1"
                 android:textColorHint="@color/grayDark"
                 android:textSize="@dimen/text_size_16sp" />
