--- a/app/src/main/res/layout-land/fragment_change_password.xml
+++ b/app/src/main/res/layout-land/fragment_change_password.xml
@@ -83,8 +83,9 @@
                     android:gravity="center_vertical"
                     android:hint="@string/change_password_hint_current"
                     android:imeOptions="actionNext"
-                    android:inputType="textNoSuggestions"
+                    android:inputType="textPassword"
                     android:maxLines="1"
+                    android:textAlignment="viewStart|gravity"
                     android:textColorHint="@color/grayDark"
                     android:textSize="@dimen/text_size_16sp" />
 
@@ -128,8 +129,9 @@
                     android:gravity="center_vertical"
                     android:hint="@string/change_password_hint_new"
                     android:imeOptions="actionNext"
-                    android:inputType="textNoSuggestions"
+                    android:inputType="textPassword"
                     android:maxLines="1"
+                    android:textAlignment="viewStart|gravity"
                     android:textColorHint="@color/grayDark"
                     android:textSize="@dimen/text_size_16sp" />
 
@@ -173,8 +175,9 @@
                     android:gravity="center_vertical"
                     android:hint="@string/change_password_hint_retype"
                     android:imeOptions="actionDone"
-                    android:inputType="textNoSuggestions"
+                    android:inputType="textPassword"
                     android:maxLines="1"
+                    android:textAlignment="viewStart|gravity"
                     android:textColorHint="@color/grayDark"
                     android:textSize="@dimen/text_size_16sp" />
 
