--- a/app/src/main/res/layout-land/fragment_register.xml
+++ b/app/src/main/res/layout-land/fragment_register.xml
@@ -118,8 +118,9 @@
                 android:gravity="center_vertical"
                 android:hint="@string/register_hint_password"
                 android:imeOptions="actionNext"
-                android:inputType="textNoSuggestions"
+                android:inputType="textPassword"
                 android:maxLines="1"
+                android:textAlignment="viewStart|gravity"
                 android:textColorHint="@color/grayDark"
                 android:textSize="@dimen/text_size_16sp" />
 
@@ -165,8 +166,9 @@
                 android:gravity="center_vertical"
                 android:hint="@string/register_hint_retype_password"
                 android:imeOptions="actionDone"
-                android:inputType="textNoSuggestions"
+                android:inputType="textPassword"
                 android:maxLines="1"
+                android:textAlignment="viewStart|gravity"
                 android:textColorHint="@color/grayDark"
                 android:textSize="@dimen/text_size_16sp" />
 
