--- a/app/src/main/res/layout/fragment_change_password.xml
+++ b/app/src/main/res/layout/fragment_change_password.xml
@@ -81,8 +81,9 @@
                     android:gravity="center_vertical"
                     android:hint="@string/change_password_hint_current"
                     android:imeOptions="actionNext"
-                    android:inputType="textNoSuggestions"
+                    android:inputType="textPassword"
                     android:maxLines="1"
+                    android:textAlignment="viewStart|gravity"
                     android:textColorHint="@color/grayDark"
                     android:textSize="@dimen/text_size_16sp" />
 
@@ -126,8 +127,9 @@
                     android:gravity="center_vertical"
                     android:hint="@string/change_password_hint_new"
                     android:imeOptions="actionNext"
-                    android:inputType="textNoSuggestions"
+                    android:inputType="textPassword"
                     android:maxLines="1"
+                    android:textAlignment="viewStart|gravity"
                     android:textColorHint="@color/grayDark"
                     android:textSize="@dimen/text_size_16sp" />
 
@@ -171,8 +173,9 @@
                     android:gravity="center_vertical"
                     android:hint="@string/change_password_hint_retype"
                     android:imeOptions="actionDone"
-                    android:inputType="textNoSuggestions"
+                    android:inputType="textPassword"
                     android:maxLines="1"
+                    android:textAlignment="viewStart|gravity"
                     android:textColorHint="@color/grayDark"
                     android:textSize="@dimen/text_size_16sp" />
 
