--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -118,8 +118,9 @@
                 android:gravity="center_vertical"
                 android:hint="@string/login_hint_password"
                 android:imeOptions="actionDone"
-                android:inputType="textNoSuggestions"
+                android:inputType="textPassword"
                 android:maxLines="1"
+                android:textAlignment="viewStart|gravity"
                 android:textColorHint="@color/grayDark"
                 android:textSize="@dimen/text_size_16sp" />
 
