--- a/app/src/main/res/layout/fragment_change_password.xml
+++ b/app/src/main/res/layout/fragment_change_password.xml
@@ -78,12 +78,11 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/localized_regular"
-                    android:gravity="center_vertical"
                     android:hint="@string/change_password_hint_current"
                     android:imeOptions="actionNext"
                     android:inputType="textPassword"
                     android:maxLines="1"
-                    android:textAlignment="viewStart|gravity"
+                    android:textAlignment="viewStart"
                     android:textColorHint="@color/grayDark"
                     android:textSize="@dimen/text_size_16sp" />
 
@@ -124,12 +123,11 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/localized_regular"
-                    android:gravity="center_vertical"
                     android:hint="@string/change_password_hint_new"
                     android:imeOptions="actionNext"
                     android:inputType="textPassword"
                     android:maxLines="1"
-                    android:textAlignment="viewStart|gravity"
+                    android:textAlignment="viewStart"
                     android:textColorHint="@color/grayDark"
                     android:textSize="@dimen/text_size_16sp" />
 
@@ -170,12 +168,11 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/localized_regular"
-                    android:gravity="center_vertical"
                     android:hint="@string/change_password_hint_retype"
                     android:imeOptions="actionDone"
                     android:inputType="textPassword"
                     android:maxLines="1"
-                    android:textAlignment="viewStart|gravity"
+                    android:textAlignment="viewStart"
                     android:textColorHint="@color/grayDark"
                     android:textSize="@dimen/text_size_16sp" />
 
