--- a/app/src/main/res/menu/menu_warranty_details.xml
+++ b/app/src/main/res/menu/menu_warranty_details.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/action_menu_add"
+        android:id="@+id/action_menu_delete"
         android:icon="@drawable/ic_menu_delete"
         android:title="@string/warranty_details_menu_title_delete"
         app:showAsAction="always" />
