--- a/app/src/main/res/layout/fragment_warranties.xml
+++ b/app/src/main/res/layout/fragment_warranties.xml
@@ -14,8 +14,9 @@
         app:layout_constraintTop_toTopOf="parent"
         app:title="@string/warranties_text_title">
 
+        <!-- TODO CHANGE FONT STYLE -->
         <androidx.appcompat.widget.SearchView
-            android:id="@+id/sv_warranties"
+            android:id="@+id/search_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical|end"
@@ -27,12 +28,12 @@
     </com.google.android.material.appbar.MaterialToolbar>
 
     <com.airbnb.lottie.LottieAnimationView
-        android:id="@+id/lav_empty_list"
+        android:id="@+id/lav_empty_warranties_list"
         android:layout_width="@dimen/width_250dp"
         android:layout_height="@dimen/height_250dp"
         android:layout_marginHorizontal="@dimen/margin_4dp"
         android:layout_marginTop="@dimen/margin_4dp"
-        app:layout_constraintBottom_toTopOf="@+id/tv_empty_list"
+        app:layout_constraintBottom_toTopOf="@+id/tv_empty_warranties_list"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolbar"
@@ -40,25 +41,59 @@
         app:layout_constraintVertical_chainStyle="packed"
         app:lottie_autoPlay="true"
         app:lottie_loop="false"
-        app:lottie_rawRes="@raw/anim_empty_list"
-        app:lottie_speed="1.10" />
+        app:lottie_rawRes="@raw/anim_empty_warranties_list" />
 
     <com.google.android.material.textview.MaterialTextView
-        android:id="@+id/tv_empty_list"
+        android:id="@+id/tv_empty_warranties_list"
         android:layout_width="@dimen/width_0dp"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="@dimen/margin_28dp"
         android:layout_marginBottom="@dimen/margin_60dp"
         android:fontFamily="@font/localized_bold"
         android:gravity="center"
-        android:text="@string/warranties_text_empty_list"
+        android:text="@string/warranties_text_empty_warranties_list"
         android:textAlignment="gravity"
         android:textColor="@color/grayDark"
         android:textSize="@dimen/text_size_16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/lav_empty_list"
+        app:layout_constraintTop_toBottomOf="@+id/lav_empty_warranties_list"
+        app:layout_constraintVertical_bias="0.5" />
+
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/lav_empty_search_result_list"
+        android:layout_width="@dimen/width_250dp"
+        android:layout_height="@dimen/height_250dp"
+        android:layout_marginHorizontal="@dimen/margin_4dp"
+        android:layout_marginTop="@dimen/margin_4dp"
+        app:layout_constraintBottom_toTopOf="@+id/tv_empty_search_result_list"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar"
+        app:layout_constraintVertical_bias="0.5"
+        app:layout_constraintVertical_chainStyle="packed"
+        app:lottie_autoPlay="true"
+        app:lottie_loop="false"
+        app:lottie_rawRes="@raw/anim_empty_search_result_list"
+        app:lottie_speed="2.0" />
+
+    <com.google.android.material.textview.MaterialTextView
+        android:id="@+id/tv_empty_search_result_list"
+        android:layout_width="@dimen/width_0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="@dimen/margin_28dp"
+        android:layout_marginBottom="@dimen/margin_60dp"
+        android:fontFamily="@font/localized_bold"
+        android:gravity="center"
+        android:text="@string/warranties_text_empty_search_result_list"
+        android:textAlignment="gravity"
+        android:textColor="@color/grayDark"
+        android:textSize="@dimen/text_size_16sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/lav_empty_search_result_list"
         app:layout_constraintVertical_bias="0.5" />
 
     <com.google.android.material.textview.MaterialTextView
@@ -128,11 +163,18 @@
         app:layout_constraintTop_toBottomOf="@+id/toolbar" />
 
     <androidx.constraintlayout.widget.Group
-        android:id="@+id/group_empty_list"
+        android:id="@+id/group_empty_warranties_list"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:visibility="gone"
-        app:constraint_referenced_ids="tv_empty_list,lav_empty_list" />
+        app:constraint_referenced_ids="tv_empty_warranties_list,lav_empty_warranties_list" />
+
+    <androidx.constraintlayout.widget.Group
+        android:id="@+id/group_empty_search_result_list"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        app:constraint_referenced_ids="tv_empty_search_result_list,lav_empty_search_result_list" />
 
     <androidx.constraintlayout.widget.Group
         android:id="@+id/group_network"
