--- a/app/src/main/res/layout/fragment_warranties.xml
+++ b/app/src/main/res/layout/fragment_warranties.xml
@@ -22,6 +22,7 @@
             android:layout_gravity="center_vertical|end"
             android:maxWidth="@dimen/max_width_1000dp"
             app:closeIcon="@drawable/ic_menu_close"
+            app:iconifiedByDefault="true"
             app:queryHint="@string/warranties_menu_hint_search"
             app:searchIcon="@drawable/ic_menu_search" />
 
