--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -23,7 +23,7 @@
         <item name="android:windowSplashScreenBrandingImage" tools:targetApi="s">
             @drawable/ic_logo_xeniac
         </item>
-        <item name="postSplashScreenTheme">@style/Theme.WarrantyRoster.Landing</item>
+        <item name="postSplashScreenTheme">@style/Theme.WarrantyRoster</item>
     </style>
 
     <style name="Theme.WarrantyRoster.Landing" parent="Theme.WarrantyRoster">
